@@ -126,7 +126,13 @@ uint8_t u8g_com_arduino_hw_spi_fn(u8g_t *u8g, uint8_t msg, uint8_t arg_val, void
       SPCR =  (1<<SPE) | (1<<MSTR)|(0<<SPR1)|(0<<SPR0)|(0<<CPOL)|(0<<CPHA);
 #ifdef U8G_HW_SPI_2X
       SPSR = (1 << SPI2X);  /* double speed, issue 89 */
+#else
+      if ( arg_val  <= U8G_SPI_CLK_CYCLE_50NS )
+      {
+	SPSR = (1 << SPI2X);  /* double speed, issue 89 */
+      }
 #endif
+      
       
       break;
     
